--- a/style.css
+++ b/style.css
@@ -10,22 +10,44 @@ input {
   font-size: 1em;
 }
 
+input[type="checkbox"] {
+	display: inline-block;
+	margin-right: 10px;
+}
+
+ul {
+	line-height: 25px;
+}
+
 li {
   list-style-type: none;
 }
 
+li:hover a {
+	opacity: .35;
+}
+
 .completed {
   text-decoration: line-through;
-  opacity: .5;
+  opacity: .25;
+}
+
+.deleted {
+	display: none;
 }
 
 a {
+	opacity: 0;
 	font-size: 10px;
 	color: #fff;
 	background-color: red;
 	margin-left: 7px;
 	padding: 3px 6px 4px;
 	border-radius: 3px;
-	opacity: .5;
 	text-decoration: none;
+	transition: .2s all ease-in-out;
+}
+
+li a:hover {
+	opacity: 1;
 }
